--- a/frontend/templates/notes.html
+++ b/frontend/templates/notes.html
@@ -107,7 +107,7 @@
     <div class="container">
         <div class="welcome">
             <h2>Welcome to Notes App</h2>
-            <p>Enter your notes below</p>
+            <p>Enter your note below</p>
         </div>
         
         <div class="note-form">
