--- a/frontend/templates/notes.html
+++ b/frontend/templates/notes.html
@@ -106,7 +106,7 @@
     
     <div class="container">
         <div class="welcome">
-            <h2>Welcome to Notes App</h2>
+            <h2>Welcome to Note Keeper</h2>
             <p>Enter your note below</p>
         </div>
         
